# my_adventures_api

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: app.rs  auth.rs  errors.rs  logger.rs  main.rs  response.rs  routes.rs
src/db/: Cargo.toml
src/db/src/: connection.rs  lib.rs  models.rs  repository.rs  schema.rs  shims.rs  types.rs
src/db/src/queries/: adventures.rs  articles.rs  comments.rs  favorites.rs  followers.rs  mod.rs  users.rs
src/db/tests/: conduit_articles.rs  conduit_favorites.rs
src/db/tests/helpers/: mod.rs
src/domain/: Cargo.toml
src/domain/src/: errors.rs  lib.rs  repositories.rs
src/domain/src/adventures/: mod.rs  models.rs
src/domain/src/articles/: errors.rs  models.rs
src/domain/src/comments/: errors.rs  models.rs
src/domain/src/users/: errors.rs  models.rs
src/domain/tests/: domain_articles.rs
src/domain/tests/helpers/: mod.rs
src/handlers/: mod.rs
src/handlers/adventures/: delete.rs  get.rs  insert.rs  list.rs  mod.rs  play_list.rs  responses.rs  tabs.rs  update.rs  version.rs
src/handlers/articles/: delete.rs  favorite.rs  feed.rs  find.rs  insert.rs  list.rs  mod.rs  responses.rs  tags.rs  update.rs
src/handlers/comments/: create.rs  delete.rs  get.rs  responses.rs
src/handlers/profiles/: follow.rs  get.rs  responses.rs
src/handlers/users/: current_user.rs  login.rs  mod.rs  register.rs  responses.rs  update.rs
