[package]
name = "rust-warp-sqlx-backend"
version = "0.1.0"
authors = ["许忠亮 <geniusmickymouse@qq.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.13"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4"
jsonwebtoken = "7.2.0"
serde = "1.0.114"
serde_derive = "1.0.114"
tokio = { version = "0.2.22", features = ["macros"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
async-trait = "0.1"
warp = "0.2.5"

db = { package = "realworld-db", path = "./src/db" }
domain = { package = "realworld-domain", path = "./src/domain" }
