[package]
name = "my_adventures_api"
version = "0.1.0"
authors = ["SimonOsaka <geniusmickymouse@qq.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
flexi_logger = "0.19.3"
log = "0.4"
jsonwebtoken = "7.2.0"
serde = "1.0.125"
serde_derive = "1.0.125"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
async-trait = "0.1"
warp = "0.3.1"

db = { package = "my_adventures-db", path = "./src/db" }
domain = { package = "my_adventures-domain", path = "./src/domain" }
