[package]
name = "realworld-db"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>", "LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

[features]
default = [ "postgres" ]
postgres = [ "sqlx/postgres"]
mysql = [ "sqlx/mysql"]

[lib]
name = "realworld_db"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "chrono" ] }
serde = { version= "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
# uuid = { version = "0.7.4", features = ["serde", "v4"] }
domain = { package = "realworld-domain", path = "../domain" }
anyhow = "1.0.40"
async-trait = "0.1"
flexi_logger = "0.17.1"
log = "0.4"
sql-builder = "3.1.1"

[dev-dependencies]
fake = "1.2.2"
log = "*"
