[package]
name = "realworld-domain"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>", "LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

[lib]
name = "realworld_domain"
path = "src/lib.rs"

[dependencies]
serde = { version= "1.0.114", features = ["derive"] }
chrono = { version = "0.4.13", features = ["serde"] }
# uuid = { version = "=0.7.4", features = ["serde", "v4"] }
itertools = "0.9.0"
thiserror = "1.0.20"
bcrypt = "0.8.1"
anyhow = "1.0.32"
async-trait = "0.1"
flexi_logger = "0.16"
log = "0.4"

[dev-dependencies]
db = { package = "realworld-db", path = "../db" }
fake = "1.2.2"
