[package]
name = "my_adventures-domain"
version = "0.1.0"
authors = ["SimonOsaka <geniusmickymouse@qq.com>"]
edition = "2018"

[lib]
name = "my_adventures_domain"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
# uuid = { version = "=0.7.4", features = ["serde", "v4"] }
itertools = "0.9.0"
thiserror = "1.0.20"
bcrypt = "0.8.1"
anyhow = "1.0.40"
async-trait = "0.1"
flexi_logger = "0.19.3"
log = "0.4"

[dev-dependencies]
db = { package = "my_adventures-db", path = "../db" }
fake = "1.2.2"
